--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
    <nav class="navbar">
       <div id="close-navbar" class="fas fa-times"></div>
-      <a href="home.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="courses.html">Courses</a>
       <a href="contact.html">Contact</a>
@@ -258,14 +258,6 @@
 
 <!-- home courses slider section ends -->
 
-
-
-
-
-
-
-
-
 <!-- footer section starts  -->
 
 <section class="footer">
@@ -285,7 +277,7 @@
 
       <div class="box">
          <h3>quick links</h3>
-         <a href="home.html" class="link">Home</a>
+         <a href="index.html" class="link">Home</a>
          <a href="about.html" class="link">About</a>
          <a href="courses.html" class="link">Courses</a>
          <a href="contact.html" class="link">Contact</a>
