--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 
    <nav class="navbar">
       <div id="close-navbar" class="fas fa-times"></div>
-      <a href="home.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="courses.html">Courses</a>
       <a href="contact.html">Contact</a>
@@ -78,7 +78,7 @@
 
 <section class="heading-link">
    <h3>About Us</h3>
-   <p> <a href="home.html">Home</a> / About </p>
+   <p> <a href="index.html">Home</a> / About </p>
 </section>
 
 <!-- about section starts  -->
@@ -344,7 +344,7 @@
 
       <div class="box">
          <h3>quick links</h3>
-         <a href="home.html" class="link">Home</a>
+         <a href="index.html" class="link">Home</a>
          <a href="about.html" class="link">About</a>
          <a href="courses.html" class="link">Courses</a>
          <a href="contact.html" class="link">Contact</a>
