--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 
    <nav class="navbar">
       <div id="close-navbar" class="fas fa-times"></div>
-      <a href="home.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="courses.html">Courses</a>
       <a href="contact.html">Contact</a>
@@ -78,7 +78,7 @@
 
 <section class="heading-link">
    <h3>Contact us</h3>
-   <p> <a href="home.html">Home</a> / Contact </p>
+   <p> <a href="index.html">Home</a> / Contact </p>
 </section>
 
 <!-- contact section starts  -->
@@ -247,7 +247,7 @@
 
       <div class="box">
          <h3>quick links</h3>
-         <a href="home.html" class="link">Home</a>
+         <a href="index.html" class="link">Home</a>
          <a href="about.html" class="link">About</a>
          <a href="courses.html" class="link">Courses</a>
          <a href="contact.html" class="link">Contact</a>
